Better integration with digestif to avoid copies
Also expose more base hashes

--- a/test/irmin-chunk/dune
+++ b/test/irmin-chunk/dune
@@ -6,7 +6,7 @@
 (executable
  (name      test)
  (modules   test)
- (libraries test_chunk))
+ (libraries digestif.c test_chunk))
 
 (alias
  (name    runtest)
