--- a/test/irmin-mem/dune
+++ b/test/irmin-mem/dune
@@ -6,7 +6,7 @@
 (executable
  (name      test)
  (modules   test)
- (libraries test_mem))
+ (libraries digestif.ocaml test_mem))
 
 (alias
  (name    runtest)
