--- a/src/irmin/dune
+++ b/src/irmin/dune
@@ -1,4 +1,5 @@
 (library
  (name        irmin)
  (public_name irmin)
- (libraries   result fmt uri cstruct jsonm lwt ocamlgraph hex logs astring))
+ (libraries   result fmt uri cstruct jsonm lwt ocamlgraph hex logs astring
+              digestif))
