--- a/irmin.opam
+++ b/irmin.opam
@@ -12,6 +12,8 @@ build: [
  ["dune" "build" "-p" name "-j" jobs]
 ]
 
+build-test: ["dune" "runtest" "-p" name]
+
 depends: [
   "dune"    {build & >= "1.1.0"}
   "result"
